--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<title>miketronic</title>
 		
-<link rel="stylesheet" type="text/css" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="../public/css/style.css" />
 <!-- This page fully validates as XHTML 1.0 Strict on validator.w3.org (notice can be removed) -->
 	</head>
 
