--- a/02-home.html
+++ b/02-home.html
@@ -6,7 +6,7 @@ Deep, version 1.5 created on 17/10/04 for OSWD.org ... DO NOT REMOVE this notice
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	
 	<title>miketronic - home</title>
-	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/style.css" />
 	
 <!-- This page fully validates as XHTML 1.0 Strict on validator.w3.org (this notice can be removed) -->
 	
