--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<title>miketronic</title>
 		
-<link rel="stylesheet" href="public/css/style.css">
+<link rel="stylesheet" href="style.css">
 <!-- This page fully validates as XHTML 1.0 Strict on validator.w3.org (notice can be removed) -->
 	</head>
 
