--- a/home2.html
+++ b/home2.html
@@ -6,7 +6,7 @@ Deep, version 1.5 created on 17/10/04 for OSWD.org ... DO NOT REMOVE this notice
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	
 	<title>miketronic - home</title>
-	<link rel="stylesheet" type="text/css" href="../public/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	
 <!-- This page fully validates as XHTML 1.0 Strict on validator.w3.org (this notice can be removed) -->
 	
@@ -18,7 +18,7 @@ Deep, version 1.5 created on 17/10/04 for OSWD.org ... DO NOT REMOVE this notice
 			
 				 <div class="bgtext">mtronic</div>
 			
-				 <div id="close"><a href="/index/" title="close and return to menu">X</a></div>
+				 <div id="close"><a href="index.html" title="close and return to menu">X</a></div>
 				 <div id="top"><a href="#top" title="back to top">^</a></div> 
 			
 				 <!--greyed out links-->
@@ -31,7 +31,7 @@ Deep, version 1.5 created on 17/10/04 for OSWD.org ... DO NOT REMOVE this notice
 				 <div id="text7">contact us</div>		
 				 <!--greyed out links end-->
 			
-				 <div id="urltext"><a href="/index/" class="navigurl" title="click to return to the index page">index &raquo; </a>home</div>
+				 <div id="urltext"><a href="index.html" class="navigurl" title="click to return to the index page">index &raquo; </a>home</div>
 				 	  
 					  <div id="content">
 					  	   <a name="top"></a> <!-- very important! this is the anchor for the back to top feature. Remove it at your own risk! :P -->
