--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="bgtext">mtronic</div>
 			
 			
-			<div id="text1"><a href="/home/">home<span>&raquo;the main bit, where stuff happens.</span></a></div>
+			<div id="text1"><a href="home.html">home<span>&raquo;the main bit, where stuff happens.</span></a></div>
 			<div id="text2"><a href="#">news<span>&raquo;just like it says.</span></a></div>
 			<div id="text3"><a href="#">archives<span>&raquo;It's all done in CSS, too.</span></a></div>
 			<div id="text4"><a href="#">music<span>&raquo;put another thing here</span></a></div>
